<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background2"
    tools:context=".activities.ProductActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/product_name"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewProductImage"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_marginStart="100sp"
                android:layout_marginBottom="20sp"
                android:layout_marginTop="20sp"
                android:src="@drawable/logo_v3" />

                <TextView
                android:id="@+id/flowlayoutInformationTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/ingredient_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:text="@string/ingredients_label"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <cn.lankton.flowlayout.FlowLayout
                android:id="@+id/flowlayoutIngredientTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:lineSpacing="10dp">

            </cn.lankton.flowlayout.FlowLayout>

            <TextView
                android:id="@+id/title_nutrients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:text="@string/nutrients_label"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
            <cn.lankton.flowlayout.FlowLayout
                android:id="@+id/flowlayoutNutrientTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:lineSpacing="10dp">
            </cn.lankton.flowlayout.FlowLayout>

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v4.widget.NestedScrollView>

</android.support.v7.widget.LinearLayoutCompat>