<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".fragments.BarcodeProductFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="336dp"
        android:layout_height="181dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="160dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272">

        <TextView
            android:id="@+id/numberTextView"
            android:layout_width="170dp"
            android:layout_height="31dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="15dp"
            android:text="@string/barcode_product_activity_manual_input_label"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/barcodeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <EditText
            android:id="@+id/barcodeText"
            android:layout_width="214dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/barcode_product_activity_message_inside_textbox"
            android:inputType="number"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@+id/btnSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberTextView" />

        <ImageButton
            android:id="@+id/btnCamera"
            android:layout_width="51dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/camera_green"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toTopOf="@+id/btnSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberTextView"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="159dp"
            android:layout_height="37dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="25dp"
            android:background="@android:color/darker_gray"
            android:text="@string/barcode_product_activity_search_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barcodeText" />

        <TextView
            android:id="@+id/or_option_barcode_fragment"
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="5dp"
            android:text="or"
            android:textSize="16sp"
            android:textColor="@android:color/background_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.759"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.435" />


    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="345dp"
        android:layout_height="122dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826"
        app:srcCompat="@drawable/text_logo" />

    <!--<ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/text_logo" /> -->

</android.support.constraint.ConstraintLayout>